openshift/secrets-config.yml
apiVersion: v1
kind: Namespace
metadata:
  name: correpalabras
