openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: correpalabras-api
  namespace: correpalabras
  labels:
    app: correpalabras-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: correpalabras-api
