openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: correpalabras-backend-git
  namespace: dev-itlab
  labels:
    app: correpalabras-backend-git
    group: correpalabras-git-app
spec:
  host: ""
  to:
    kind: Service
    name: correpalabras-backend-git
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
